--- a/sass/base/_tables.scss
+++ b/sass/base/_tables.scss
@@ -6,10 +6,10 @@ th {
  color: $blue;
  font-weight: bold;
  vertical-align: top;
- @include rem(padding, 10px);
+ padding: em(10px);
  }
 /*MICHELLE EDITS: Table styling*/
 td {
- @include rem(padding, 10px);
+ padding: em(10px);
  vertical-align: top;
 }
