--- a/sass/components/_addthis.scss
+++ b/sass/components/_addthis.scss
@@ -5,12 +5,12 @@
   display: inline-block;
   border: 1px solid lighten($base-gray, 69%);
   @include link-colors($gray, $link-color-hover, $link-color-hover, $gray, $gray);
-  @include rem(padding, 0 30px 0 12px);
+  padding: 0 em(30px) 0 em(12px);
   background: #fff;
-  @include rem(margin-left, 10px);
+  margin-left: em(10px);
   &:before {
     content: "SHARE";
-    @include rem(font-size, $font-size-small);
+    font-size: em($font-size-small);
   }
   &:after {
     content: "\f0fe";
@@ -20,11 +20,11 @@
     text-decoration: inherit;
 /*--adjust as necessary--*/
     color: $gray;
-    @include rem(font-size, $font-size-base);
-    @include rem(padding-left, $font-size-base/2);
+    font-size: em($font-size-base);
+    padding-left: em($font-size-base/2);
     position: absolute;
-    @include rem(top,  2px);
-    @include rem(right,  7px);
+    top:  em(2px);
+    right: em(7px);
   }
   &:hover {
    &:after {
@@ -35,7 +35,7 @@
 }
 
 #at15pf.atm-f {
- @include rem(padding, 15px);
+ padding: em(15px);
 }
 
 @include breakpoint($tab) {
@@ -45,6 +45,6 @@
     right: 0;
     top: 0;
     //@include rem(top, $font-size-h1);
-    @include rem(margin-left, $horz-spacing-unit);
+    margin-left: em($horz-spacing-unit);
   }
 }
