--- a/sass/components/_taxonomy.scss
+++ b/sass/components/_taxonomy.scss
@@ -2,8 +2,8 @@
  * {
   margin: 0;
   font-weight: bold;
-  @include rem(font-size, $font-size-base);
+  font-size: em($font-size-base);
   line-height: $line-height-base;
  }
- @include rem(margin-bottom, $line-height-base);
+ margin-bottom: em($line-height-base);
 }
