--- a/sass/components/_tb_megamenu.scss
+++ b/sass/components/_tb_megamenu.scss
@@ -11,7 +11,7 @@
       &.active > a {
         // Set ($normal, $hover, $active, $visited, $focus)
         @include link-colors(white, $blue-light, white, white, white);
-        @include rem(padding, ceil($vert-spacing-unit/8) $horz-spacing-unit/2);
+        padding: em(ceil($vert-spacing-unit/8)) em($horz-spacing-unit/2);
         background-image: none;
         border: none;
         background: none;
@@ -69,7 +69,7 @@
       color: $blue-light;
     }
     .fa {
-      @include rem(font-size, $font-size-h1)
+      font-size: em($font-size-h1)
     }
     @include breakpoint($desk, true) {
       display: none;
@@ -131,9 +131,9 @@
               // Set ($normal, $hover, $active, $visited, $focus)
               @include link-colors($gray-darker);
               border-left: none;
-              @include rem(padding, $vert-spacing-unit/2);
+              padding: em($vert-spacing-unit/2);
               @include breakpoint($wide) {
-                @include rem(padding-right, $horz-spacing-unit);
+                padding-right: em($horz-spacing-unit);
               }
               &:focus, &:hover {
                 background: none;
@@ -214,8 +214,8 @@
           text-decoration: inherit;
           /*--adjust as necessary--*/
          // color: #000;
-          @include rem(padding-left, 10px);
-          @include rem(font-size, 30px);
+          padding-left: em(10px);
+          font-size: em(30px);
         }
       }
     }
@@ -224,7 +224,7 @@
       background-position: 0 -20px;
     }
     .mega-caption {
-      @include rem(font-size, $font-size-small);
+      font-size: em($font-size-small);
       line-height: $line-height-small;
       color: #FFF;
     }
@@ -233,7 +233,7 @@
 
 @include breakpoint('screen' (max-width 979px)) {
   .tb-megamenu .mega-inner {
-    padding: 10px;
+    padding: em(10px);
   }
   .tb-megamenu .mega-nav > li a, .tb-megamenu .dropdown-menu .mega-nav > li a {
     margin-left: 0;
@@ -261,13 +261,14 @@
           }
           > a,
           &.active > a {
-            @include rem(padding, $vert-spacing-unit/2 $vert-spacing-unit/2  $vert-spacing-unit);
+            padding: em($vert-spacing-unit/2) em($vert-spacing-unit/2) em($vert-spacing-unit);
           }
         }
         li:first-child {
           > a,
           &.active > a {
-            @include rem(padding-left,$vert-spacing-unit/2);
+            padding-top: em($vert-spacing-unit/2);
+            padding-left: em($vert-spacing-unit/2);
           }
         }
       }
