--- a/sass/components/node/_node.scss
+++ b/sass/components/node/_node.scss
@@ -1,10 +1,10 @@
 .page-node {
   &.node-type-survey {
     .field--name-field-collection-title {
-      @include rem(font-size, $font-size-h1);
+      font-size: em($font-size-h1);
     }
     .field--name-field-inclusive-dates {
-      @include rem(font-size, $font-size-h2);
+      font-size: em($font-size-h2);
     }
   }
   .node__submitted {
@@ -15,7 +15,7 @@
       margin: 0;
     }
     font-weight: 600;
-    @include rem(margin-bottom, $line-height-base*2);
+    margin-bottom: em($line-height-base*2);
   }
   article,
   .node-form {
@@ -61,7 +61,7 @@
 
     .field--name-field-subheading {
       font-weight: bold;
-      @include rem(margin-bottom, $line-height-base);
+      margin-bottom: em($line-height-base);
     }
     .field--name-field-caption {
       @extend .highlight;
@@ -87,7 +87,7 @@
           float: left;
           width: 25%;
           font-weight: 600;
-          @include rem(padding-right, $horz-spacing-unit);
+          padding-right: em($horz-spacing-unit);
         }
       }
       .field--name-field-hours {
